--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Digital clock with Glowing Effect </title>
+    <title> My Glowing Clock || CSV </title>
     <link rel="Stylesheet" href="style.css">
 </head>
 <body>
